<resources>
	<string name="app_name">SHINE</string>
	<string name="cite">INFORMATION BULLETIN ON THE TESTS OF GENERAL EDUCATIONAL DEVELOPMENT\n
						General Educational Development Testing Service®\n
						American Council on Education	</string>
	<string name="not_official_disclaimer">This is not an Official GED® Practice Test. But it will give you a good 
		    idea of areas you may need to review.	</string>
	<string name="external_website">This link takes you to an external website. An internet connection is required to view this information. \n Are you sure you want to continue?</string>
	<string name="disclaimer_text">GED® and GED Testing Service® are registered trademarks of the American Council on Education and may not be used or reproduced without express written permission. The GED® and GED Testing Service® brands are administered by GED Testing Service® LLC under license from the American Council on Education.</string>
<string name="volume">Volume:</string>
<string name="do_you_want_to_continue">Do you want to continue?</string>
    <string name="tollFreeLabel"><b>Phone Numbers:</b> %1$s</string>
    <string name="tollFree"></string>
    <string name="footer_2_1">Shenandoah Initiative for Adult Education</string>
    <string name="footer_2_2"></string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="website">Website</string>
    <string name="locality1_name"><b>Adult Learning Center</b></string>
    <string name="locality1_subname">Augusta and Staunton Area</string>
    <string name="locality1_phone">(540) 245-5083</string>
    <string name="locality1_url">http://www.augusta.k12.va.us/site/Default.aspx?PageID=12171</string>
    <string name="locality2_name"><b>Building Blocks</b></string>
    <string name="locality2_subname">Waynesboro Area</string>
    <string name="locality2_phone">(540) 946-9241</string>
    <string name="locality2_url">http://www.waynesboroadulted.wordpress.com/</string>
    <string name="locality3_name"><b>Massanutten Technical Center</b></string>
    <string name="locality3_subname">Harrisonburg and Rockingham Area</string>
    <string name="locality3_phone">(540) 434-5962</string>
    <string name="locality3_url">http://www.rockingham.k12.va.us/mtc/adult.html</string>
    <string name="locality4_name"><b>Rockbridge Regional</b></string>
    <string name="locality4_subname">Bath, Buena Vista, Highland, Lexington, and Rockbridge Area</string>
    <string name="locality4_phone">(540) 462-7536</string>
    <string name="locality4_url">Website Currently Under Construction</string>
    <string name="math_label">Math</string>
    <string name="readwrite_label">Language Arts</string>
    <string name="science_label">Science</string>
    <string name="socialstudies_label">Social Studies</string>
    <string name="theGedLabel">The GED® Test</string>
    <string name="theInitialGedLabel">The GED® Tests</string>
    <string name="more_label">For more options press the menu button.</string>
    <string name="welcome_label">Welcome, please select a subject:</string>
    <string name="footer">Shenandoah Initiative for Adult Education</string>
    <string name="location_label">Classes</string>
    <string name="rdysetgo_label">Testing</string>
    <string name="freeresources_label">Free Resources</string>
    <string name="tour_label">Tour</string>
    <string name="contact_label">Contact Us</string>
    <string name="devteam_label">Developers</string>
    <string name="exit_label">Exit</string>
    <string name="info_label">Info</string>
    <string name="back_label">Back</string>
    <string name="vidtest_Label">Videos and Testimonials</string>
    <string name="sources_label">Sources</string>
    <string name="feedback_label">Feedback</string>
    <string name="feedback_info">Found an error or bug? Have a suggestion or idea? Submit it below!</string>
    <string name="email"><b>Your Email:</b></string>
    <string name="name"><b>Your Name:</b></string>
    <string name="email_content"><b>Email Body:</b></string>
    <string name="send"><b>Send</b></string>
    <string name="ace">American Council on Education, GED Testing Service®</string>
    <string name="mhc">McGraw-Hill Companies, Online Learning Center</string>
     <string name="enter_answer">Enter Your Answer</string>
    <string name="choose_answer">Choose an Answer</string>
    <string name="no_selection_title">Opps!</string>
    <string name="no_selection_yes_button">OK</string>
    <string name="no_selection_message">You forgot to select an answer.</string>
    <string name="correct_selection_title">Good Job!</string>
    <string name="correct_selection_yes_button">Next Question</string>
    <string name="correct_selection_message">You selected the correct answer.</string>
    <string name="wrong_selection_title">Try Again!</string>
    <string name="wrong_selection_yes_button">Try Again</string>
    <string name="max_attempts_title">Max Attempts Reached!</string>
    <string name="max_attempts_yes_button">Next Question</string>
    <string name="max_attempts_message">Correct Answer:\n\n" %1$s</string>
        <string name="selection_error_title">Error!</string>
    <string name="selection_error_yes_button">Reload Question</string>
    <string name="selection_error_message">There was an error generating results.</string>
        <string name="completed_questions_title">No More Questions!</string>
    <string name="completed_questions_yes_button">Restart Test</string>
    <string name="completed_questions_no_button">Exit Test</string>
    <string name="completed_questions_message">You completed all the questions</string>
    <string name="question_part_1">Question Part 1</string>
    <string name="question_part_2">Question Part 2</string>
    <string name="medium_text">Medium Text</string>
     <string name="multipleChoiceImage">multipleChoiceImage</string>
    <string name="mathGuidelinesLabel">Math Guidelines</string>
    <string formatted="false" name="mathGuidelines_info">
        The GED® Mathematics Test is divided into two parts, each containing 25 questions.  The parts are equally weighted.   
        On Part 1 of the test you may use the Casio fx-60 calculator to help you compute your answers.  Use of the calculator 
        is not permitted on Part 2 of the Mathematics Test.\n
        \n
        The following areas are tested on the Mathematics Test:\n
        ● Number Operations and Number Sense:  20% - 30%\n
        ● Measurement and Geometry:  20% - 30%\n
        ● Data Analysis, Statistics, and Probability:  20% - 30%\n
        ● Algebra, Functions, and Patterns:  20% - 30%\n
        \n
        80% of the questions are multiple choice.  The remaining 20% of the answers are calculated and entered in an alternate 
        format into a standard grid or coordinate plane.\n
        \n
        A total of 90 minutes is allowed for the GED® Mathematics Test – 45 minutes for Part I and 45 minutes for Part II.  A 
        formula sheet, containing all the formulas that might be needed, is provided.
    </string>
    <string name="mathAltGuidelinesLabel">Alternate-Format Guidelines</string>
    <string formatted="false" name="mathAltGuidelines_info">
        On the Math portion of the GED® Test, 20% of the questions will require you to calculate your own answer, record that answer on 
        a grid, and fill in the corresponding circles on the grid.  Both Parts I and II will have these items.\n
        \n
        When using the standard grid:\n
        ● Begin in any column that will allow your entire answer to be entered.\n
        ● Write your answer in the boxes on the top row, including decimals and the slash for a fraction bar.\n
        ● In the column beneath the number or symbol that you have written into your answer, fill in the bubble representing that number or symbol.\n
        ● Leave any unused column blank.\n
        \n
        Remember:\n
        ● Your answer sheet will be machine scored, so the circles must be filled in correctly.\n
        ● Mark only one circle in each column.\n
        ● No answer will be a negative number\n
        ● Mixed numbers must be gridded as improper fractions or decimals.  For example, 1 ½ would be gridded as either 3/2 or 1.5.\n
        ● Decimal numbers may be entered with or without a leading zero.  For example, either 0.5 or .5 would be an acceptable answer. \n
    </string>
    <string name="math_multiplechoice_label">Multiple Choice Practice</string>
    <string name="math_cat_heading">Select your category</string>
    <string name="math_altformat_label">Alternate-Format</string>
    <string name="scienceGuidelinesLabel">Science Guidelines</string>
    <string formatted="false" name="scienceGuideLines_info">
        The GED® Science Test consists of 50 multiple choice questions from the following content areas:\n
        ● Earth and Space Science:  20%\n
        ● Life Science:  45%\n
        ● Physical Science(Physics and Chemistry):  35%\n
        \n
        The questions on the GED® Science Test require you to understand, interpret, or apply information that 
        is provided on the test or that is learned through life experience. The information may be presented 
        in a paragraph, chart, table, graph, map, or figure.\n
        \n
        The Science Test must be completed in 80 minutes.
    </string>
    <string name="writingGuideLinesLabel">Writing Guidelines</string>
    <string name="aboutdevs_label">About Developers</string>
    <string name="class_label">Class:</string>
    <string name="class_data">ITP 298 - Software Capstone</string>
    <string name="instructor_label">Instructor:</string>
    <string name="instructor_data">Nasser Maksoud</string>
    <string name="college_label">College:</string>
    <string name="developers_label">Developers:</string>
    <string name="bryan_label">Bryan Smith</string>
    <string name="mike_label">Mike Hiller</string>
    <string name="michael_label">Michael Meade</string>
    <string name="jarrod_label">Jarrod Adams</string>
    <string name="devByMecc">SHINE Android App Developed by:\nBryan Smith\n\nSHINE app is based upon previous development for RAE created in MECC ITP 298 (April 2012)</string>
    <string name="distance_title">Distance Learning</string>
    <string name="distance_place"><center>GED® Online and Books</center></string>
    <string name="distance_phone">Call nearest center for details</string>
    <string name="distance_time"></string>
    <string name="distance_instructors">Katharine Parrish\n<u>kparrish@waynesboro.k12.va.us</u></string>
</resources>