<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/topFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:background="@color/primary_color">

        <FrameLayout
            android:id="@+id/mainFrame"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/header_cover" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/aboutdevs_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/content_color"
                android:textSize="24sp"
                android:typeface="normal" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameBorder"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/secondary_color" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="@drawable/header_cover">
            </FrameLayout>

        </FrameLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/contentScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" android:fadingEdge="vertical" android:fadingEdgeLength="25dp">








        <LinearLayout
            android:id="@+id/contentArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="259dp"
                android:layout_margin="15dp"
                android:src="@drawable/adulted_logo_recreated_big_extra_text_effects" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="12dp"
                android:text="@string/devByMecc"
                android:textColor="@color/content_color" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="307dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/college_label"
                android:src="@drawable/mecc_logo_text" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:text="@string/instructor_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/content_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/instructor_data"
                android:textColor="@color/content_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/class_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/content_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/class_data"
                android:textColor="@color/content_color"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/developers_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/content_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/bryan_label"
                android:textColor="@color/content_color"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/jarrod_label"
                android:textColor="@color/content_color"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/michael_label"
                android:textColor="@color/content_color"
                android:textSize="12sp" />



            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/mike_label"
                android:textColor="@color/content_color"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>