<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/secondary_color"
    android:orientation="vertical" android:padding="4dp">


    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/popup_title_background" >





        <TextView
            android:id="@+id/titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/popup_title_background"
            android:padding="10dp"
            android:text="@string/distance_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />








        <FrameLayout
            android:id="@+id/closeFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp" >















                        <ImageButton  android:id="@+id/closeButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="right" android:background="@null"  android:padding="10dp" android:scaleType="fitCenter" android:src="@drawable/window_close" />

        </FrameLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:minWidth="150dp"
        android:orientation="vertical"
        android:padding="10dp" android:background="@color/background_color">






        <TextView
            android:id="@+id/place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_place"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/content_color" />









        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/distance_phone"
            android:textColor="@android:color/black" />




        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/distance_time"
            android:textColor="@android:color/black" />






        <TextView
            android:id="@+id/instructors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:maxWidth="200dp"
            android:text="@string/distance_instructors"
            android:textColor="@android:color/black" />

    </LinearLayout>

</LinearLayout>